--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -52,7 +52,7 @@
             <a class="nav-link js-scroll-trigger" href="#team">Onde estamos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
           </li>
         </ul>
       </div>
@@ -63,8 +63,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading shadow-lg">Ao cuidado da sua segurança</div>
-        <div class="intro-lead-in">Vamos conversar?</div>
+       <div class="intro-lead-in">Soluções para a sua realidade</div>
+        <div class="intro-lead-in">Podemos ajudar?</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger shadow-lg"
            href="#services">SABER MAIS</a>
       </div>
@@ -486,7 +486,14 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted">Siga-nos...</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/msl.seguros.5" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -526,7 +533,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">Contactos</h2>
           <h3 class="section-subheading text-muted">Entre em contacto</h3>
         </div>
       </div>
@@ -610,30 +617,69 @@
 
   <!-- Modal 1 -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" id="modal">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
           <div class="lr">
             <div class="rl"></div>
           </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <i class="fas fa-4x fa-car text-primary mb-4"></i>
-                <h2 class="text-uppercase">Automóvel</h2>
-                <p class="item-intro text-muted">Seguro obrigatório.</p>
-                <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-                <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close</button>
-              </div>
+        <div class="row">
+          <div class="col-sm" style="border-right: grey 1px solid">
+            <div class="container">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <i class="fas fa-4x fa-car text-primary mb-4"></i>
+                    <h3 class="text-uppercase">Automóvel</h3>
+                    <p class="item-intro text-muted">Seguro obrigatório.</p>
+                    <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
+                    <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
+                    <button class="btn btn-primary showhide" type="button">
+                      <i class="fas fa-angle-right"></i>
+                      Simulação</button>
+                  </div>
             </div>
           </div>
+          <div class="col-sm" style="display:none;" id="simulationDialog">
+            <form id="SimulationForm" name="sentMessage" novalidate="novalidate">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    Nome
+                    <input class="form-control" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+                  <div class="form-group">
+                    Marca
+                    <input class="form-control" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+                  <div class="form-group">
+                    Modelo
+                    <input class="form-control" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <textarea class="form-control" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="col-lg-12 text-center">
+                  <div id="success"></div>
+                  <button class="btn btn-primary" type="submit" id="sendSimulation">
+                    <i class="fas fa-angle-right"></i>
+                    Pedir Simulação</button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
+
+
+
       </div>
     </div>
   </div>
@@ -820,7 +866,7 @@
   <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
+  <script src="js/agency.js"></script>
 
 </body>
 
