--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center portfolio-item">
-          <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <div class="car">
-              <i class="icon-car-crash fas fa-4x as fa-car-crash text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
-              <i class="icon-car fas fa-4x fa-car text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
+          <div class="mt-5 portfolio-icon icon" title="Ver detalhes">
+            <div class="icon">
+              <i class="icon-first fas fa-4x as fa-car-crash text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
+              <i class="icon-hover fas fa-4x fa-car text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
             </div>
             <h3 class="h4 mb-2">Automovel</h3>
             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
@@ -131,7 +131,10 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item">
           <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <i class="fas fa-4x fa-home text-primary mb-4" ></i>
+            <div class="icon">
+              <i class="icon-first fas fa-4x fa-house-damage text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
+              <i class="icon-hover fas fa-4x fa-home text-primary mb-4" data-toggle="modal" href="#portfolioModal1"></i>
+            </div>
             <h3 class="h4 mb-2">Habitação</h3>
             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
           </div>
