Change hover menu color

--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Saude" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <i class="fas fa-4x fa-user-md text-primary mb-4"></i>
+              <div class="icon">
+                <i class="icon-first fas fa-4x fa-ambulance text-primary mb-4" ></i>
+                <i class="icon-hover fas fa-4x fa-user-md text-primary mb-4" ></i>
+              </div>
               <h3 class="h4 mb-2">Saúde</h3>
               <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
             </div>
@@ -188,103 +191,6 @@
       </div>
     </div>
   </section>
-  <!--<section class="bg-light page-section" id="portfolio">-->
-    <!--<div class="container">-->
-      <!--<div class="row">-->
-        <!--<div class="col-lg-12 text-center">-->
-          <!--<h2 class="section-heading text-uppercase">Portfolio</h2>-->
-          <!--<h3 class="section-subheading text-muted">Porque oferecemos a melhor solução para o que necessita, a melhor gestão dos seus seguros e a segurança de um acompanhamento personalizado em todas as fases do seu seguro.</h3>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<i class="fas fa-4x fa-car text-primary mb-4"></i>-->
-           <!--&lt;!&ndash; <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt=""> &ndash;&gt;-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Threads</h4>-->
-            <!--<p class="text-muted">Illustration</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Explore</h4>-->
-            <!--<p class="text-muted">Graphic Design</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Finish</h4>-->
-            <!--<p class="text-muted">Identity</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Lines</h4>-->
-            <!--<p class="text-muted">Branding</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Southwest</h4>-->
-            <!--<p class="text-muted">Website Design</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-4 col-sm-6 portfolio-item">-->
-          <!--<a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">-->
-            <!--<div class="portfolio-hover">-->
-              <!--<div class="portfolio-hover-content">-->
-                <!--<i class="fas fa-plus fa-3x"></i>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">-->
-          <!--</a>-->
-          <!--<div class="portfolio-caption">-->
-            <!--<h4>Window</h4>-->
-            <!--<p class="text-muted">Photography</p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</section>-->
 
   <!-- About -->
   <!--<section class="page-section" id="about">-->
@@ -509,56 +415,21 @@
     </div>
   </section>
 
-  <!-- Clients -->
+  <!-- Partners -->
   <section class="py-5">
     <div class="px-5">
       <p class="item-intro text-muted">Os nossos parceiros:</p>
       <div class="row">
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/libertySeguros.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/allianz.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/ageas.jpg" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/tranquilidade.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/Victoria.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/caravela.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/lusitania.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/SaudePrime.png" alt="">
-          </a>
-        </div>
-        <div class="col">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/logo-medis.svg" alt="">
-          </a>
-        </div>
+        <div class="col img" style="background-image: url('img/logos/libertySeguros.png')"></div>
+        <div class="col img" style="background-image: url('img/logos/allianz.jpg')"></div>
+        <div class="col img" style="background-image: url('img/logos/ageas_old.jpg')"></div>
+        <div class="col img" style="background-image: url('img/logos/logo-medis.svg')"></div>
+        <div class="col img" style="background-image: url('img/logos/lusitania.png')"></div>
+        <div class="col img" style="background-image: url('img/logos/caravela.png')"></div>
+        <div class="col img" style="background-image: url('img/logos/Victoria.png')"></div>
+        <div class="col img" style="background-image: url('img/logos/SaudePrime.png')"></div>
+        <div class="col img" style="background-image: url('img/logos/tranquilidade.png')"></div>
+
       </div>
     </div>
   </section>
@@ -679,7 +550,6 @@
   <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
   <script src="js/mslweb.js"></script>
 
 
