--- a/index.html
+++ b/index.html
@@ -449,28 +449,28 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="name" type="text" placeholder="Nome Completo" required="required" data-validation-required-message="É Necessario introduzir o Nome">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                  <input class="form-control" id="email" type="email" placeholder="Email" required="required" data-validation-required-message="É Necessario introduzir o Email">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+                  <input class="form-control" id="phone" type="tel" placeholder="Telefone/Telemovel" required="required" data-validation-required-message="É Necessario introduzir o numero Telefone/Telemovel">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea class="form-control" id="message" placeholder="Deixe a sua mensagem" required="required" data-validation-required-message="É Necessario introduzir a Mensagem"></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button id="sendMessageButton" name="send" value="Send" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
               </div>
             </div>
           </form>
@@ -485,26 +485,7 @@
       <div class="row align-items-center">
         <div class="col-md-7">
           <span class="copyright">&copy; MSL Mediadora de Seguros do Lima, Lda 2019. Todos os direitos reservados</span>
-        </div>
-        <!--<div class="col-md-4">-->
-          <!--<ul class="list-inline social-buttons">-->
-            <!--<li class="list-inline-item">-->
-              <!--<a href="#">-->
-                <!--<i class="fab fa-twitter"></i>-->
-              <!--</a>-->
-            <!--</li>-->
-            <!--<li class="list-inline-item">-->
-              <!--<a href="#">-->
-                <!--<i class="fab fa-facebook-f"></i>-->
-              <!--</a>-->
-            <!--</li>-->
-            <!--<li class="list-inline-item">-->
-              <!--<a href="#">-->
-                <!--<i class="fab fa-linkedin-in"></i>-->
-              <!--</a>-->
-            <!--</li>-->
-          <!--</ul>-->
-        <!--</div>-->
+        </div>       
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
