--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Viagem" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <i class="fas fa-4x fa-globe-africa text-primary mb-4"></i>
+              <div class="icon">
+                <i class="icon-first fas fa-4x fa-plane-slash text-primary mb-4" ></i>
+                <i class="icon-hover fas fa-4x fa-globe-africa text-primary mb-4" ></i>
+              </div>
               <h3 class="h4 mb-2">Viagem</h3>
               <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
             </div>
