change email no valid to Portuguese

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Email" required="required" data-validation-required-message="É Necessario introduzir o Email">
+                  <input class="form-control" id="email" type="email" placeholder="Email" required="required" data-validation-required-message="É Necessario introduzir o Email" data-validator-validemail-message="É Necessario introduzir o Email valido">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
