logo spacing unified remove old logo

--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@
     <div class="px-5">
       <p class="item-intro text-muted">Os nossos parceiros:</p>
       <div class="row">
-        <div class="col img" style="background-image: url('img/logos/libertySeguros.png')"></div>
-        <div class="col img" style="background-image: url('img/logos/allianz.jpg')"></div>
-        <div class="col img" style="background-image: url('img/logos/ageas_old.jpg')"></div>
-        <div class="col img" style="background-image: url('img/logos/logo-medis.svg')"></div>
-        <div class="col img" style="background-image: url('img/logos/lusitania.png')"></div>
-        <div class="col img" style="background-image: url('img/logos/caravela.png')"></div>
-        <div class="col img" style="background-image: url('img/logos/Victoria.png')"></div>
-        <div class="col img" style="background-image: url('img/logos/SaudePrime.png')"></div>
-        <div class="col img" style="background-image: url('img/logos/tranquilidade.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/libertySeguros.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/allianz.jpg')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/ageas.jpg')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/logo-medis.svg')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/lusitania.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/caravela.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/SaudePrime.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/Victoria.png')"></div>
+        <div class="col-sm-4 col-lg img m-lg-1" style="background-image: url('img/logos/tranquilidade.png')"></div>
 
       </div>
     </div>
