--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="AcidentesPessoais" data-toggle="modal" data-target="#portfolioModal">
           <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <i class="fas fa-4x fa-diagnoses text-primary mb-4"></i>
+            <div class="icon">
+              <i class="icon-first fas fa-4x fa-diagnoses text-primary mb-4" ></i>
+              <i class="icon-hover fas fa-4x fa-hand-holding-medical text-primary mb-4" ></i>
+            </div>
             <h3 class="h4 mb-2">Acidentes Pessoais</h3>
             <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
           </div>
@@ -169,7 +172,10 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Vida" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <i class="fas fa-4x fa-heartbeat text-primary mb-4"></i>
+              <div class="icon">
+                <i class="icon-first fas fa-4x fa-heart-broken text-primary mb-4" ></i>
+                <i class="icon-hover fas fa-4x fa-hand-holding-heart text-primary mb-4" ></i>
+              </div>
               <h3 class="h4 mb-2">Vida</h3>
               <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
             </div>
@@ -285,7 +291,9 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                <a href="#contact">
+                  <h4 ><br>Contacte-nos</h4>
+                </a>
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -293,25 +301,8 @@
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Estamos à vontade em seguros para particulares, bem como nos seguros para empresários e empresas.</p>
+                  <!-- <p class="text-muted">RECOMENDAMOS: Aceite o nonselho. Seja em seguros novos ou na alteração de seguros que detenha, conte com a nossa experiência.</p> -->
                 </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Recomendamos</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Aceite o nosso conselho. Seja em seguros novos ou na alteração de seguros que detenha, conte com a nossa experiência.</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <h4></br>Contacte-nos</h4>
               </div>
             </li>
           </ul>
