add show Phone Number add show Email

--- a/index.html
+++ b/index.html
@@ -326,14 +326,14 @@
             <img class="mx-auto rounded-circle" src="img/team/vianaDoCastelo.jpg" alt="">
             <h4>Viana do Castelo</h4>
             <p class="text-muted"> Praça 1 De Maio, Lt. 7, 1º, Sala F</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#" data-toggle="tooltip" title="Telefone">
+            <ul class="list-inline social-buttons" data-item="Viana">
+              <li class="list-inline-item" data-item="Phone">
+                <a>
                   <i class="fas fa-phone"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
-                <a href="#" data-toggle="tooltip" title="E-mail">
+              <li class="list-inline-item" data-item="Email">
+                <a>
                   <i class="fas fa-envelope"></i>
                 </a>
               </li>
@@ -344,6 +344,7 @@
                 </a>
               </li>
             </ul>
+            <div id="label" class="shadow-sm mt-2  bg-white rounded"> </div>
           </div>
         </div>
         <div class="col-sm-4">
@@ -351,13 +352,13 @@
             <img class="mx-auto rounded-circle" src="img/team/caminha2.jpg" alt="">
             <h4>Caminha</h4>
             <p class="text-muted">Av. Manuel Xavier, 89</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
+            <ul class="list-inline social-buttons" data-item="Caminha" >
+              <li class="list-inline-item" data-item="Phone">
+                <a data-toggle="tooltip" title="Telefone">
                   <i class="fas fa-phone"></i>
                 </a>
-              <li class="list-inline-item">
-                <a href="#">
+              <li class="list-inline-item" data-item="Email">
+                <a data-toggle="tooltip" title="E-mail">
                   <i class="fas fa-envelope"></i>
                 </a>
               </li>
@@ -367,6 +368,7 @@
                 </a>
               </li>
             </ul>
+            <div id="label" class="shadow-sm  mt-2 bg-white rounded"> </div>
           </div>
         </div>
         <div class="col-sm-4">
@@ -374,14 +376,14 @@
             <img class="mx-auto rounded-circle" src="img/team/ponteDeLima.jpg" alt="">
             <h4>Ponte de Lima</h4>
             <p class="text-muted">Rua José de Abreu Coutinho, nº22 1º</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
+            <ul class="list-inline social-buttons" data-item="PonteLima">
+              <li class="list-inline-item" data-item="Phone">
+                <a data-toggle="tooltip" title="Telefone">
                   <i class="fas fa-phone"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
-                <a href="#contact">
+              <li class="list-inline-item" data-item="Email">
+                <a data-toggle="tooltip" title="E-mail">
                   <i class="fas fa-envelope"></i>
                 </a>
               </li>
@@ -391,6 +393,7 @@
                 </a>
               </li>
             </ul>
+            <div id="label" class="shadow-sm  mt-2  bg-white rounded"> </div>
           </div>
         </div>
       </div>
