--- a/index.html
+++ b/index.html
@@ -526,6 +526,8 @@
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
+  <!-- Script from Vendor-->
+  <script src="js/agency.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/mslweb.js"></script>
