minor layout changes

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="offset-md-2 col-sm-6 col-md-4  ">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/vianaDoCastelo.jpg" alt="">
             <h4>Viana do Castelo</h4>
@@ -347,7 +347,7 @@
             <div id="label" class="shadow-sm mt-2  bg-white rounded"> </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5 ">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/caminha2.jpg" alt="">
             <h4>Caminha</h4>
@@ -371,7 +371,7 @@
             <div id="label" class="shadow-sm  mt-2 bg-white rounded"> </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <!-- <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/ponteDeLima.jpg" alt="">
             <h4>Ponte de Lima</h4>
@@ -395,7 +395,7 @@
             </ul>
             <div id="label" class="shadow-sm  mt-2  bg-white rounded"> </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
