--- a/Portfolio/Habitacao.html
+++ b/Portfolio/Habitacao.html
@@ -1,56 +1,88 @@
 <div class="row">
     <div class="col-sm" style="border-right: grey 1px solid">
-    <div class="container">
+        <div class="container">
             <div class="modal-body">
-            <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
-            <h3 class="text-uppercase">habitacap</h3>
-            <p class="item-intro text-muted">Seguro obrigatório.</p>
-            <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-            <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
-            <button class="btn btn-primary showhide" type="button">
-                <i class="fas fa-angle-right"></i>
-                Simulação</button>
+                <i class="fas fa-4x fa-home text-primary mb-4"></i>
+                <h3 class="text-uppercase">Habitação</h3>
+                <p class="item-intro text-muted">Não há lugar melhor que o nosso lar</p>
+                <p>Garantindo a segurança do seu lar, um seguro de habitação cobre os danos provocados ao imóvel e
+                    recheio (dependendo do contratado) por ações que não são da responsabilidade do proprietário como
+                    fenómenos naturais, incendio, raio e explosão, furto ou roubo, entre outros.</p>
+                <p>O seguro de habitação inclui também a cobertura de responsabilidade civil.</p>
+                <button class="btn btn-primary showhide" type="button">
+                    <i class="fas fa-angle-right"></i>
+                    Simulação</button>
             </div>
-    </div>
+        </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
-    <form id="SimulationForm" name="sentMessage" novalidate="novalidate">
-        <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-            Nome
-            <input class="form-control" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-            <p class="help-block text-danger"></p>
+        <form id="SimulationForm" name="sentMessage" novalidate="novalidate">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        Tipo imóvel
+                        <input class="form-control" type="text" placeholder="Ex Apartamento, Vivenda" required="required"
+                            data-validation-required-message="Please enter your name.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        Tipo utilização
+                        <input class="form-control" type="text" placeholder="Your Email *" required="required"
+                            data-validation-required-message="Please enter your email address.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        Número de pisos
+                        <input class="form-control" type="text" placeholder="Número de pisos *" required="required"
+                            data-validation-required-message="Please enter your phone number.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        Ano de Construção
+                        <input class="form-control" type="text" placeholder="Ano de Construção *" required="required"
+                            data-validation-required-message="Please enter your phone number.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        Area de Construção
+                        <input class="form-control" type="text" placeholder="Area de Construção *" required="required"
+                            data-validation-required-message="Please enter your phone number.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        Nome
+                        <input class="form-control" type="text" placeholder="Your Name *" required="required"
+                            data-validation-required-message="Please enter your name.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        E-mail
+                        <input class="form-control" type="email" placeholder="Your Email *" required="required"
+                            data-validation-required-message="Please enter your email address.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        Telefone
+                        <input class="form-control" type="tel" placeholder="Your Phone *" required="required"
+                            data-validation-required-message="Please enter your phone number.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Your Message *" required="required"
+                            data-validation-required-message="Please enter a message."></textarea>
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="col-lg-12 text-center">
+                    <div id="success"></div>
+                    <button class="btn btn-primary" type="submit" id="sendSimulation">
+                        <i class="fas fa-angle-right"></i>
+                        Pedir Simulação</button>
+                </div>
             </div>
-            <div class="form-group">
-            Marca
-            <input class="form-control" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-            <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-            Modelo
-            <input class="form-control" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-            <p class="help-block text-danger"></p>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-            <textarea class="form-control" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-            <p class="help-block text-danger"></p>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-        <div class="col-lg-12 text-center">
-            <div id="success"></div>
-            <button class="btn btn-primary" type="submit" id="sendSimulation">
-            <i class="fas fa-angle-right"></i>
-            Pedir Simulação</button>
-        </div>
-        </div>
-    </form>
+        </form>
     </div>
 </div>
-
-
-
