--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <link href="css/agency.css" rel="stylesheet">
   <link href="css/msl.css" rel="stylesheet">
 
+  <!--Particules CSS-->
+  <link rel="stylesheet" media="screen" href="css/style.css">
+
 
 </head>
 
@@ -63,12 +66,13 @@
 
   <!-- Header -->
   <header class="masthead">
+    <div id="particles-js"></div>
     <div class="container">
       <div class="intro-text">
        <div class="intro-lead-in">Soluções para a sua realidade</div>
         <div class="intro-lead-in">Podemos ajudar?</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger shadow-lg"
-           href="#services">SABER MAIS</a>
+        <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger shadow-lg"
+           href="#services">SABER MAIS</a> -->
       </div>
     </div>
   </header>
@@ -532,6 +536,9 @@
   <!-- Custom scripts for this template -->
   <script src="js/mslweb.js"></script>
 
+  <!-- scripts -->
+  <script src="js/particles.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
