minor css and html changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Serviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre nós</a>
@@ -120,7 +120,7 @@
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Portfolio</h2>
+        <h2 class="section-heading text-uppercase">Produtos</h2>
         <h3 class="section-subheading text-muted" style="margin-bottom:0px;">Consulte a nossa oferta em todos os ramos.</h3>
       </div>
       <hr class="divider my-4">
@@ -196,7 +196,10 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Outros" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <i class="fas fa-4x fa-comment-dots text-primary mb-4"></i>
+              <div class="icon">
+                <i class="icon-first fas fa-4x fa-comment-dots text-primary mb-4" ></i>
+                <i class="icon-hover fas fa-4x fa-plus text-primary mb-4" ></i>
+              </div>
               <h3 class="h4 mb-2">Outros</h3>
               <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
             </div>
@@ -330,13 +333,14 @@
             <img class="mx-auto rounded-circle" src="img/team/vianaDoCastelo.jpg" alt="">
             <h4>Viana do Castelo</h4>
             <p class="text-muted"> Praça 1 De Maio, Lt. 7, 1º, Sala F</p>
+            <p class="text-muted"> Seg-Sex 09:00 - 12:30, 14:00 - 18:00</p>
             <ul class="list-inline social-buttons" data-item="Viana">
-              <li class="list-inline-item" data-item="Phone">
+              <li class="list-inline-item" data-item="Phone" title="Telefone">
                 <a>
                   <i class="fas fa-phone"></i>
                 </a>
               </li>
-              <li class="list-inline-item" data-item="Email">
+              <li class="list-inline-item" data-item="Email" title="E-mail">
                 <a>
                   <i class="fas fa-envelope"></i>
                 </a>
@@ -356,6 +360,7 @@
             <img class="mx-auto rounded-circle" src="img/team/caminha2.jpg" alt="">
             <h4>Caminha</h4>
             <p class="text-muted">Av. Manuel Xavier, 89</p>
+            <p class="text-muted"> Seg-Sex 09:00 - 12:30, 14:00 - 18:00</p>
             <ul class="list-inline social-buttons" data-item="Caminha" >
               <li class="list-inline-item" data-item="Phone">
                 <a data-toggle="tooltip" title="Telefone">
@@ -406,8 +411,18 @@
           <p class="large text-muted">Siga-nos...</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/msl.seguros.5" target="_blank">
+              <a href="https://www.facebook.com/msl.seguros.5" target="_blank" style="background-color: #3b5998;">
                 <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/msl.seguros.5" target="_blank" style="background-color: #C13584;">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/msl.seguros.5" target="_blank" style="background-color: #1DA1F2;">
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
           </ul>
