--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="offset-md-2 col-sm-6 col-md-4  ">
+        <div class="offset-md-1 col-sm-6 col-md-5 offset-lg-2 col-lg-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/vianaDoCastelo.jpg" alt="">
             <h4>Viana do Castelo</h4>
@@ -355,9 +355,9 @@
             <div id="label" class="shadow-sm mt-2  bg-white rounded"> </div>
           </div>
         </div>
-        <div class="col-sm-5 ">
+        <div class="col-sm-6 col-md-5 col-lg-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/caminha2.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="" alt="">
             <h4>Caminha</h4>
             <p class="text-muted">Av. Manuel Xavier, 89</p>
             <p class="text-muted"> Seg-Sex 09:00 - 12:30, 14:00 - 18:00</p>
@@ -476,6 +476,9 @@
                   <input class="form-control" id="phone" type="tel" placeholder="Telefone/Telemovel" required="required" data-validation-required-message="É Necessario introduzir o numero Telefone/Telemovel">
                   <p class="help-block text-danger"></p>
                 </div>
+                <div class="form-group">
+                  <input class="form-control" id="subject" placeholder="Assunto   Ex. Pedir Simulação, Produtos/Coberturas, Dúvidas/Esclarecimentos, Sinistros ... ">
+              </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
@@ -486,7 +489,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" name="send" value="Send" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button id="sendMessageButton" name="send" value="Send" class="btn btn-primary btn-xl text-uppercase" type="submit">> Enviar</button>
               </div>
             </div>
           </form>
