update texts change color icons

--- a/Portfolio/AcidentesPessoais.html
+++ b/Portfolio/AcidentesPessoais.html
@@ -4,10 +4,10 @@
             <div class="modal-body">
             <!-- Project Details Go Here -->
             <i class="fas fa-4x fa-car text-primary mb-4"></i>
-            <h3 class="text-uppercase">ACidentes PEssoais</h3>
-            <p class="item-intro text-muted">Seguro obrigatório.</p>
-            <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-            <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
+            <h3 class="text-uppercase">Acidentes Pessoais Individual</h3>
+            <p>Esteja preparado para qualquer urgência.</p>
+            <h3 class="text-uppercase">Acidentes Pessoais Familiar</h3>
+            <p>Proteja-se e proteja os seus familiares em caso de qualquer urgência.</p>
             <button class="btn btn-primary showhide" type="button">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
