--- a/Portfolio/Viagem.html
+++ b/Portfolio/Viagem.html
@@ -6,8 +6,7 @@
             <i class="fas fa-4x fa-car text-primary mb-4"></i>
             <h3 class="text-uppercase">viagem</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
-            <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-            <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
+            <p>Viaje tranquilo para qualquer destino sabendo que o seguro de viagem lhe garante a melhor assistência em Portugal e no estrangeiro e consciente de que qualquer problema tem assegurada uma solução em qualquer parte do mundo.</p>
             <button class="btn btn-primary showhide" type="button">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
