remove color icons

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary color-blue"></i>
+            <i class="fas fa-circle fa-stack-2x text-primary "></i>
             <i class="fas fa-id-badge fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Emissão e gestão de Apólices</h4>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary color-red"></i>
+            <i class="fas fa-circle fa-stack-2x text-primary "></i>
             <i class="fas fa-car-crash fa-stack-1x fa-inverse portfolio-hover-content"></i>
           </span>
           <h4 class="service-heading">Gestão de sinistros</h4>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary color-green"></i>
+            <i class="fas fa-circle fa-stack-2x text-primary "></i>
             <i class="fas fa-hands-helping fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Aconselhamento jurídico</h4>
