change Modal icons

--- a/Portfolio/AcidentesDeTrabalho.html
+++ b/Portfolio/AcidentesDeTrabalho.html
@@ -3,7 +3,7 @@
     <div class="container">
             <div class="modal-body">
             <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
+            <i class="fas fa-4x fa-user-md text-primary mb-4"></i>
             <h3 class="text-uppercase">ACIDENTES de TRABALHO</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
