--- a/Portfolio/AcidentesPessoais.html
+++ b/Portfolio/AcidentesPessoais.html
@@ -3,7 +3,7 @@
     <div class="container">
             <div class="modal-body">
             <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
+            <i class="fas fa-4x fa-hand-holding-medical text-primary mb-4"></i>
             <h3 class="text-uppercase">Acidentes Pessoais Individual</h3>
             <p>Esteja preparado para qualquer urgência.</p>
             <h3 class="text-uppercase">Acidentes Pessoais Familiar</h3>
