--- a/Portfolio/Saude.html
+++ b/Portfolio/Saude.html
@@ -3,7 +3,7 @@
     <div class="container">
             <div class="modal-body">
             <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
+            <i class="fas fa-4x fa-user-md text-primary mb-4"></i>
             <h3 class="text-uppercase">saude</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>Porque a saúde é importante, este seguro cobre todos os riscos associados aos cuidados de saúde necessários ao segurado conforme coberturas escolhidas, por reembolso das despesas e/ou pagamento direto aos prestadores de cuidados de saúde.</p>
