--- a/Portfolio/Vida.html
+++ b/Portfolio/Vida.html
@@ -3,7 +3,7 @@
     <div class="container">
             <div class="modal-body">
             <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
+            <i class="fas fa-4x fa-hand-holding-heart  text-primary mb-4"></i>
             <h3 class="text-uppercase">vida</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>O seguro de vida surge como forma de prevenir consequências de grande impacto na vida dos cidadãos indemnizando os beneficiários os custos acrescidos resultantes dos danos de morte, invalidez ou acidente.</p>
