--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <i class="icon-hover fas fa-4x fa-hand-holding-heart text-primary mb-4" ></i>
               </div>
               <h3 class="h4 mb-2">Vida</h3>
-              <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+              <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.....</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Viagem" data-toggle="modal" data-target="#portfolioModal">
