adds circle in icons

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- Header -->
   <header class="masthead">
     <div id="particles-js"></div>
-    <div class="container">
+    <div class="container introduction">
       <div class="intro-text">
        <div class="intro-lead-in">Soluções para a sua realidade</div>
         <div class="intro-lead-in">Podemos ajudar?</div>
@@ -127,10 +127,12 @@
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Automovel" data-toggle="modal" data-target="#portfolioModal" >
-          <div class="mt-5 portfolio-icon icon" title="Ver detalhes">
-            <div class="icon">
-              <i class="icon-first fas fa-4x as fa-car-crash text-primary mb-4" ></i>
-              <i class="icon-hover fas fa-4x fa-car text-primary mb-4" ></i>
+          <div class="mt-5 portfolio-icon" title="Ver detalhes">
+            <div class="icon-placer">
+              <div class="icon">
+                <i class="icon-first fas fa-car-crash text-primary" ></i>
+                <i class="icon-hover fas fa-car text-primary" ></i>
+              </div>
             </div>
             <h3 class="h4 mb-2">Automovel</h3>
             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
@@ -138,30 +140,30 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Habitacao" data-toggle="modal" data-target="#portfolioModal">
           <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <div class="icon">
-              <i class="icon-first fas fa-4x fa-house-damage text-primary mb-4" ></i>
-              <i class="icon-hover fas fa-4x fa-home text-primary mb-4" ></i>
-            </div>
+           
+            <div class="icon-placer"> <div class="icon">
+              <i class="icon-first fas fa-house-damage text-primary " ></i>
+              <i class="icon-hover fas fa-home text-primary " ></i>
+            </div></div>
             <h3 class="h4 mb-2">Habitação</h3>
             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="AcidentesPessoais" data-toggle="modal" data-target="#portfolioModal">
           <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <div class="icon">
-              <i class="icon-first fas fa-4x fa-diagnoses text-primary mb-4" ></i>
-              <i class="icon-hover fas fa-4x fa-hand-holding-medical text-primary mb-4" ></i>
-            </div>
+            <div class="icon-placer"><div class="icon">
+              <i class="icon-first fas fa-diagnoses text-primary" ></i>
+              <i class="icon-hover fas fa-hand-holding-medical text-primary " ></i>
+            </div></div>
             <h3 class="h4 mb-2">Acidentes Pessoais</h3>
             <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="AcidentesDeTrabalho" data-toggle="modal" data-target="#portfolioModal">
           <div class="mt-5 portfolio-icon" title="Ver detalhes">
-            <div class="icon">
-              <i class="icon-first fas fa-4x fa-user-injured text-primary mb-4" ></i>
-              <i class="icon-hover fas fa-4x fa-people-carry text-primary mb-4" ></i>
-            </div>
+            <div class="icon-placer"><div class="icon">
+            <i class="fas fa-people-carry text-primary "></i>
+          </div></div>
             <h3 class="h4 mb-2">Acidentes de Trabalho</h3>
             <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
           </div>
@@ -170,41 +172,41 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Saude" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <div class="icon">
-                <i class="icon-first fas fa-4x fa-ambulance text-primary mb-4" ></i>
-                <i class="icon-hover fas fa-4x fa-user-md text-primary mb-4" ></i>
-              </div>
+              <div class="icon-placer"><div class="icon">
+                <i class="icon-first fas fa-ambulance text-primary" ></i>
+                <i class="icon-hover fas fa-user-md text-primary" ></i>
+              </div></div>
               <h3 class="h4 mb-2">Saúde</h3>
               <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Vida" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <div class="icon">
-                <i class="icon-first fas fa-4x fa-heart-broken text-primary mb-4" ></i>
-                <i class="icon-hover fas fa-4x fa-hand-holding-heart text-primary mb-4" ></i>
-              </div>
+              <div class="icon-placer"> <div class="icon">
+                <i class="icon-first fas fa-heart-broken text-primary" ></i>
+                <i class="icon-hover fas fa-hand-holding-heart text-primary" ></i>
+              </div></div>
               <h3 class="h4 mb-2">Vida</h3>
-              <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.....</p>
+              <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Viagem" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <div class="icon">
-                <i class="icon-first fas fa-4x fa-plane-slash text-primary mb-4" ></i>
-                <i class="icon-hover fas fa-4x fa-globe-africa text-primary mb-4" ></i>
-              </div>
+              <div class="icon-placer"> <div class="icon">
+                <i class="icon-first fas fa-plane-slash text-primary" ></i>
+                <i class="icon-hover fas fa-globe-africa text-primary" ></i>
+              </div></div>
               <h3 class="h4 mb-2">Viagem</h3>
               <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Outros" data-toggle="modal" data-target="#portfolioModal">
             <div class="mt-5 portfolio-icon" title="Ver detalhes">
-              <div class="icon">
+              <div class="icon-placer"><div class="icon">
                 <i class="icon-first fas fa-4x fa-comment-dots text-primary mb-4" ></i>
                 <i class="icon-hover fas fa-4x fa-plus text-primary mb-4" ></i>
-              </div>
               <h3 class="h4 mb-2">Outros</h3>
+              </div></div>
               <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
             </div>
           </div>
